# SFMLOpenGL

./: CMakeLists.txt
include/: camera.hpp  shader.hpp  texture.hpp
include/glad/: gl.h
resources/: download.jfif  triangle_fragment.fs  triangle_vertex.glsl
src/: camera.cpp  main.cpp  shader.cpp  texture.cpp
